--- a/examples/BlazorWasmExamples/Pages/DatePickerExamples.razor
+++ b/examples/BlazorWasmExamples/Pages/DatePickerExamples.razor
@@ -101,7 +101,9 @@
     </div>
 
     <div class="col-sm-12 text-info">C#</div>
-    <pre>
+
+    <div class="col-sm-12">
+        <pre>
         <code data-language="csharp">
 
             public partial class DatePickerExamples: ComponentBase
@@ -117,5 +119,6 @@
 
         </code>
         </pre>
+    </div>
 
 </div>
