--- a/test/BlazorServerSideForDebug/Pages/DatePickerTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/DatePickerTests.razor
@@ -29,7 +29,7 @@
 <div class="row" style="margin-top: 10px;">
 
     <div class="col-sm-6">
-        <BbDatePicker Format="MM/dd/yyyy" 
+        <BbDatePicker Format="MM/dd/yyyy"
                       Size="BBComponents.Enums.BootstrapElementSizes.Sm" @bind-Value="_lastDay"></BbDatePicker>
     </div>
 
@@ -44,10 +44,20 @@
 <div class="row" style="margin-top: 10px;">
 
     <div class="col-sm-6">
-        <BbDatePicker Format="MM/dd/yyyy" 
-                      FirstWeekDay="BBComponents.Enums.FirstWeekDays.Sunday" 
+        <BbDatePicker Format="MM/dd/yyyy"
+                      FirstWeekDay="BBComponents.Enums.FirstWeekDays.Sunday"
                       Size="BBComponents.Enums.BootstrapElementSizes.Sm" DropdownPosition="fixed" DropdownTopValue="100" DropdownLeftValue="200"></BbDatePicker>
     </div>
 
 </div>
+
+<div class="row" style="margin-top: 10px;">
+
+    <div class="col-sm-6">
+        <BbDatePicker Format="dd.MM.yyyy"
+                      Size="BBComponents.Enums.BootstrapElementSizes.Sm"></BbDatePicker>
+    </div>
+
+</div>
+
 
