--- a/test/BlazorServerSideForDebug/Shared/NavMenu.razor
+++ b/test/BlazorServerSideForDebug/Shared/NavMenu.razor
@@ -34,6 +34,11 @@
             </NavLink>
         </li>
 
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="contextmenu">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Context Menu
+            </NavLink>
+        </li>
 
 
     </ul>
