--- a/test/BlazorServerSideForDebug/Shared/NavMenu.razor
+++ b/test/BlazorServerSideForDebug/Shared/NavMenu.razor
@@ -40,6 +40,13 @@
             </NavLink>
         </li>
 
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="inputtext">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Text input
+            </NavLink>
+        </li>
+
+
 
     </ul>
 </div>
