--- a/test/BlazorServerSideForDebug/Shared/NavMenu.razor
+++ b/test/BlazorServerSideForDebug/Shared/NavMenu.razor
@@ -46,6 +46,11 @@
             </NavLink>
         </li>
 
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="collapsiblegroup">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Collapsible group
+            </NavLink>
+        </li>
 
 
     </ul>
