--- a/test/BlazorServerSideForDebug/Pages/CollapsibleGroupTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/CollapsibleGroupTests.razor
@@ -7,7 +7,7 @@
 
     <div class="col-sm-6">
         
-        <CollapsibleGroup TValue="Currency" Title="Currency" DataItem="_currency">
+        <BbCollapsibleGroup TValue="Currency" Title="Currency" DataItem="_currency">
 
             <div class="form-group">
                 <label>Code</label>
@@ -20,7 +20,7 @@
             </div>
 
 
-        </CollapsibleGroup>
+        </BbCollapsibleGroup>
 
     </div>
    
