--- a/test/BlazorServerSideForDebug/Pages/_Host.cshtml
+++ b/test/BlazorServerSideForDebug/Pages/_Host.cshtml
@@ -18,6 +18,8 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="/_content/HubCloud.BBComponents/styles.css" rel="stylesheet" />
 
+    <script src="~/js/site.js"></script>
+
 
 </head>
 <body>
