--- a/src/BBComponents/Components/BbDatePicker.razor
+++ b/src/BBComponents/Components/BbDatePicker.razor
@@ -1,6 +1,7 @@
 ﻿
 <div class="input-group @SizeClass bb-date-picker @HtmlClass" style="@HtmlStyle">
-    <input class="form-control" type="text"
+    <input  @ref=_inputElementReference 
+           class="form-control" type="text"
            data-toggle="tooltip" 
            title="@Tooltip"
            value="@_stringValue" 
@@ -13,43 +14,43 @@
 
     @if (_isOpen)
     {
-        <div class="bb-calendar bb-dropdown" style="top:@DropdownTop;left:@DropdownLeft;position:@DropdownPosition">
-            
-            <div class="bb-calendar__header text-primary">
+<div class="bb-calendar bb-dropdown" style="top:@DropdownTop;left:@DropdownLeft; width:@DropdownWidthValue; margin-top:@DropdownMarginTop; position: @DropdownPositionValue">
 
-                <span class="bb-calendar__button float-left text-info" @onclick="OnPreviousMonthClick">&lt;</span>
+    <div class="bb-calendar__header text-primary">
 
-                <span>@_monthName</span>&nbsp;
-                <span>@_year</span>
+        <span class="bb-calendar__button float-left text-info" @onclick="OnPreviousMonthClick">&lt;</span>
 
-                <span class="bb-calendar__button float-right text-info" @onclick="OnNextMonthClick">&gt;</span>
+        <span>@_monthName</span>&nbsp;
+        <span>@_year</span>
 
-            </div>
+        <span class="bb-calendar__button float-right text-info" @onclick="OnNextMonthClick">&gt;</span>
 
-            <div class="bb-calendar__week-days">
-                @if (_dayNames != null)
-                {
-                    @foreach(var dayName in _dayNames)
-                    {
-                        <div class="bb-calendar__week-day text-primary">@dayName</div>
-                    }
-                }
-            </div>
+    </div>
 
-            @if (_weeks != null)
+    <div class="bb-calendar__week-days">
+        @if (_dayNames != null)
+        {
+            @foreach (var dayName in _dayNames)
             {
-                @foreach(var week in _weeks)
-                {
-                    <div>
-                        @foreach(var day in week)
-                        {
-                            <div class="bb-calendar__day @day.ModificatorClass" @onclick="(e=>OnDayClick(e, day))">@day.Day</div>
-                        }
-                    </div>
-                }
+                <div class="bb-calendar__week-day text-primary">@dayName</div>
             }
+        }
+    </div>
 
-        </div>
+    @if (_weeks != null)
+    {
+        @foreach (var week in _weeks)
+        {
+            <div>
+                @foreach (var day in week)
+                {
+                    <div class="bb-calendar__day @day.ModificatorClass" @onclick="(e=>OnDayClick(e, day))">@day.Day</div>
+                }
+            </div>
+        }
+    }
+
+</div>
     }
 
 </div>
