--- a/test/BlazorServerSideForDebug/Pages/TextInputTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/TextInputTests.razor
@@ -13,3 +13,10 @@
     </div>
 
 </div>
+<div class="row">
+
+    <div class="col-sm-6">
+        <BbTextInput IsDisabled="true" @bind-Value="_textValue"></BbTextInput>
+    </div>
+
+</div>
