--- a/src/BBComponents/Components/BbComboBox.razor
+++ b/src/BBComponents/Components/BbComboBox.razor
@@ -1,61 +1,66 @@
 ﻿@typeparam TValue
 @using BBComponents.Resources
 
-<div class="input-group @SizeClass bb-combo-box">
+    <div class="input-group @SizeClass bb-combo-box">
 
-    <input @ref=_inputElementReference class="form-control" type="text"
-           value="@_inputValue"
-           data-toggle="tooltip"
-           title="@Tooltip"
-           @onchange="(e=> OnInputValueChange(e))"
-           @oninput="(e=>OnInput(e))"
-           @onkeypress="(e=>OnInputKeyPress(e))" />
+        <input @ref=_inputElementReference class="form-control" type="text"
+               value="@_inputValue"
+               disabled=@IsDisabled
+               data-toggle="tooltip"
+               title="@Tooltip"
+               @onchange="(e=> OnInputValueChange(e))"
+               @oninput="(e=>OnInput(e))"
+               @onkeypress="(e=>OnInputKeyPress(e))" />
 
-    <div class="input-group-append ">
 
-        <span class="input-group-text" style="cursor:pointer;" @onclick="(e=>OnOpenClick(e))">
-            <i class="fa fa-chevron-down"></i>
-        </span>
-        @if (!IsValueSelected)
+        @if (!IsDisabled)
         {
+            <div class="input-group-append ">
 
-            <span class="input-group-text" style="cursor:pointer;" @onclick="OnClearClick">
-                <i class="fa fa-times"></i>
-            </span>
+                <span class="input-group-text" style="cursor:pointer;" @onclick="(e=>OnOpenClick(e))">
+                    <i class="fa fa-chevron-down"></i>
+                </span>
+                @if (!IsValueSelected)
+                {
+
+                    <span class="input-group-text" style="cursor:pointer;" @onclick="OnClearClick">
+                        <i class="fa fa-times"></i>
+                    </span>
+                }
+
+            </div>
+        }
+
+        @if (_isOpen)
+        {
+            <div class="bb-combo-box bb-dropdown" style="top:@DrowdownTop; left:@DropdownLeft; width:@DropdownWidthValue; margin-top:@DropdownMarginTop; position: @DropdownPositionValue">
+
+                <ul class="bb-combo-box__items">
+                    @foreach (var item in SourceFiltered)
+                    {
+                        <li class="bb-combo-box__item @(item.IsDeleted ? "bb-combo-box__item_deleted":"")" @onclick="(e=>OnItemClick(e, item))">@item.Text</li>
+                    }
+
+                </ul>
+
+            </div>
+        }
+
+        @if (_isAddOpen)
+        {
+            <div class="bb-combo-box bb-dropdown" style="min-width:280px;top:@DrowdownTop; left:@DropdownLeft; max-height:45px;">
+                <div style="height:40px; padding:5px 15px;">
+                    <span class="text-danger">@BbResources.CannotFindItem</span>
+                    <button class="btn btn-outline-secondary btn-sm btn-default" style="font-size:10px;" @onclick="OnCancelAddNewClick">
+                        <span>@BbResources.Cancel</span>
+                    </button>
+                    <button class="btn btn-primary btn-sm btn-primary" style="font-size:10px;" @onclick="OnAddNewClick">
+                        <span class="glyphicon glyphicon-plus"></span>
+                        <span>@BbResources.Add</span>
+                    </button>
+
+                </div>
+            </div>
         }
 
     </div>
-
-    @if (_isOpen)
-    {
-        <div class="bb-combo-box bb-dropdown" style="top:@DrowdownTop; left:@DropdownLeft; width:@DropdownWidthValue; margin-top:@DropdownMarginTop; position: @DropdownPositionValue">
-
-            <ul class="bb-combo-box__items">
-                @foreach (var item in SourceFiltered)
-                {
-                    <li class="bb-combo-box__item @(item.IsDeleted ? "bb-combo-box__item_deleted":"")" @onclick="(e=>OnItemClick(e, item))">@item.Text</li>
-                }
-
-            </ul>
-
-        </div>
-    }
-
-    @if (_isAddOpen)
-    {
-        <div class="bb-combo-box bb-dropdown" style="min-width:280px;top:@DrowdownTop; left:@DropdownLeft; max-height:45px;">
-            <div style="height:40px; padding:5px 15px;">
-                <span class="text-danger">@BbResources.CannotFindItem</span>
-                <button class="btn btn-outline-secondary btn-sm btn-default" style="font-size:10px;" @onclick="OnCancelAddNewClick">
-                    <span>@BbResources.Cancel</span>
-                </button>
-                <button class="btn btn-primary btn-sm btn-primary" style="font-size:10px;" @onclick="OnAddNewClick">
-                    <span class="glyphicon glyphicon-plus"></span>
-                    <span>@BbResources.Add</span>
-                </button>
-
-            </div>
-        </div>
-    }
-
-</div>
