--- a/test/BlazorServerSideForDebug/Pages/DatePickerTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/DatePickerTests.razor
@@ -11,6 +11,15 @@
 
 </div>
 
+<div class="row">
+
+    <div class="col-sm-6">
+        <BbDatePicker Format="MM/dd/yyyy" IsDisabled="true" FirstWeekDay="BBComponents.Enums.FirstWeekDays.Sunday"></BbDatePicker>
+    </div>
+
+</div>
+
+
 <div class="row" style="margin-top: 10px;">
 
     <div class="col-sm-6">
@@ -47,7 +56,7 @@
     <div class="col-sm-6">
         <BbDatePicker Format="MM/dd/yyyy"
                       FirstWeekDay="FirstWeekDays.Sunday"
-                      Size="BootstrapElementSizes.Sm" 
+                      Size="BootstrapElementSizes.Sm"
                       DropdownPosition="DropdownPositions.Fixed"></BbDatePicker>
     </div>
 
