Calculate context menu position

--- a/src/BBComponents/Components/BbContextMenu.razor
+++ b/src/BBComponents/Components/BbContextMenu.razor
@@ -1,6 +1,6 @@
 ﻿
 
-<div class="list-group bb-context-menu" style="width: @WidthPx;  position: fixed; left: @Left; top:@Top;">
+<div class="list-group bb-context-menu" style="width: @WidthPx;  position: fixed; left: @_leftPx; top:@_topPx; bottom: @_bottomPx; right:@_rightPx;">
 
     @foreach (var item in Items)
     {
