--- a/test/BlazorServerSideForDebug/Shared/NavMenu.razor
+++ b/test/BlazorServerSideForDebug/Shared/NavMenu.razor
@@ -47,6 +47,14 @@
         </li>
 
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="checkbox">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Check box
+            </NavLink>
+        </li>
+
+
+
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="collapsiblegroup">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Collapsible group
             </NavLink>
