--- a/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
@@ -74,6 +74,7 @@
                     Size="BBComponents.Enums.BootstrapElementSizes.Sm"
                     AllowAdd="true"
                     IsDeletedName="IsDeleted"
+                    UseCustomMenu="true"
                     @bind-Value="_selectedId2"
                     @bind-Text="_selectedText2" 
                     OpenClicked="OnOpenClicked"></BbComboBox>
