--- a/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
@@ -172,6 +172,7 @@
                             <td>
                                 <BbComboBox TValue="int"
                                             DropdownPosition="DropdownPositions.Fixed"
+                                            DropdownWidth="150"
                                             ItemsSource="_products"
                                             TextName="Title"
                                             ValueName="Id"
