--- a/src/BBComponents/Components/BbDatePicker.razor
+++ b/src/BBComponents/Components/BbDatePicker.razor
@@ -6,6 +6,7 @@
                title="@Tooltip"
                value="@_stringValue"
                disabled=@IsDisabled
+               placeholder="@Placeholder"
                @onchange="(e=> OnStringValueChange(e))" />
 
         @if (!IsDisabled)
