--- a/src/BBComponents/Components/BbSelect.razor
+++ b/src/BBComponents/Components/BbSelect.razor
@@ -8,6 +8,7 @@
         disabled=@IsDisabled
         data-toggle="tooltip"
         title="@Tooltip"
+        placeholder="@Placeholder"
         value="@_value"
         @onchange="(e => OnValueChanged(e))">
 
