--- a/test/BlazorServerSideForDebug/Pages/DatePickerTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/DatePickerTests.razor
@@ -6,7 +6,7 @@
 <div class="row">
 
     <div class="col-sm-6">
-        <BbDatePicker Format="MM/dd/yyyy" FirstWeekDay="BBComponents.Enums.FirstWeekDays.Sunday"></BbDatePicker>
+        <BbDatePicker Format="MM/dd/yyyy" FirstWeekDay="BBComponents.Enums.FirstWeekDays.Sunday" Placeholder="Input date"></BbDatePicker>
     </div>
 
 </div>
