--- a/test/BlazorServerSideForDebug/Pages/TextInputTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/TextInputTests.razor
@@ -6,7 +6,7 @@
 <div class="row">
 
     <div class="col-sm-6">
-        <BbTextInput @bind-Value="_textValue"></BbTextInput>
+        <BbTextInput @bind-Value="_textValue" Placeholder="Some text"></BbTextInput>
     </div>
     <div class="col-sm-6">
         @_textValue
