--- a/src/BBComponents/Components/BbNumberInput.razor
+++ b/src/BBComponents/Components/BbNumberInput.razor
@@ -7,6 +7,7 @@
        disabled=@IsDisabled
        data-toggle="tooltip"
        title="@Tooltip"
+       placeholder="@Placeholder"
        value="@_stringValue"
        @onchange="(e => OnValueChange(e))" />
 
